# verdi-lockserv

./: .gitignore  .travis-ci.sh  .travis.yml  Makefile  README.md  configure  lockserv-seqnum.install  lockserv-seqnum.opam  lockserv-serialized.install  lockserv-serialized.opam  lockserv.install  lockserv.opam  verdi-lockserv.opam
doc/: PSEUDOCODE.md
extraction/lockserv/: .gitignore  Makefile
extraction/lockserv-seqnum/: Makefile
extraction/lockserv-seqnum/coq/: ExtractLockServSeqNum.v
extraction/lockserv-seqnum/ocaml/: LockServSeqNumArrangement.ml  LockServSeqNumOpts.ml  LockServSeqNumSerialization.ml
extraction/lockserv-seqnum/script/: run.sh
extraction/lockserv-serialized/: Makefile
extraction/lockserv-serialized/coq/: ExtractLockServSerialized.v
extraction/lockserv-serialized/ocaml/: LockServSerializedArrangement.ml  LockServSerializedOpts.ml  LockServSerializedSerialization.ml
extraction/lockserv/coq/: ExtractLockServ.v
extraction/lockserv/ocaml/: LockServArrangement.ml  LockServOpts.ml  LockServSerialization.ml  Serialization.ml
extraction/lockserv/script/: run.sh
extraction/lockserv/test/: OptsTest.ml  SerializationTest.ml
systems/: LockServ.v  LockServSeqNum.v  LockServSerialized.v
