opam-version: "1.2"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/DistributedComponents/verdi-lockserv"
dev-repo: "https://github.com/DistributedComponents/verdi-lockserv.git"
bug-reports: "https://github.com/DistributedComponents/verdi-lockserv/issues"
license: "BSD"

build: [
  [ "./configure" ]
  [ make "-j%{jobs}%" "lockserv-serialized" ]
]
available: [ ocaml-version >= "4.02.3" ]
depends: [
  "coq" {((>= "8.5" & < "8.6~") | (>= "8.6" & < "8.7~"))}
  "verdi" {= "dev"}
  "StructTact" {= "dev"}
  "cheerios" {= "dev"}
  "verdi-runtime" {= "dev"}
  "cheerios-runtime" {= "dev"}
  "ocamlfind" {build}
  "ocamlbuild" {build}
]

authors: [
  "James Wilcox <>"
  "Doug Woos <>"
  "Pavel Panchekha <>"
  "Zachary Tatlock <>"
  "Steve Anton <>"
  "Karl Palmskog <>"
  "Ryan Doenges <>"
]
